<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_efefef"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_48dp"
        android:background="@color/c_ffffff">

        <ImageView
            android:id="@+id/register_back_img"
            android:layout_width="@dimen/s_40dp"
            android:layout_height="fill_parent"
            android:padding="@dimen/s_15dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/register_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/s_18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/s_0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/c_e4e4e4" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_10dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="手机号"
            android:textColor="@color/c_666666" />

        <EditText
            android:id="@+id/register_edit_phone_num_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_phone_num"
            android:inputType="phone"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_50dp"
        android:layout_marginTop="@dimen/s_0.5dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="验证码"
            android:textColor="@color/c_666666" />

        <EditText
            android:id="@+id/register_edit_verify_code_et"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/s_30dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_verify_code"
            android:maxLength="15"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />

        <TextView
            android:id="@+id/register_get_verify_code_tv"
            style="@style/red_btn_style"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/s_10dp"
            android:layout_marginRight="@dimen/s_20dp"
            android:layout_marginTop="@dimen/s_10dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/register_get_verify_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/s_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_50dp"
        android:layout_marginTop="@dimen/s_10dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="昵称"
            android:textColor="@color/c_666666" />


        <EditText
            android:id="@+id/register_edit_nick_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/nick_name_hint"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_50dp"
        android:layout_marginTop="@dimen/s_0.5dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="密码"
            android:textColor="@color/c_666666" />

        <EditText
            android:id="@+id/register_edit_psw_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_psw"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_50dp"
        android:layout_marginTop="@dimen/s_0.5dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="确认"
            android:textColor="@color/c_666666" />

        <EditText
            android:id="@+id/register_edit_psw_repeat_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_psw_repeat"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_50dp"
        android:layout_marginTop="@dimen/s_10dp"
        android:background="@android:color/white"
        android:gravity="center">


        <TextView
            android:id="@+id/register_commit_tv"
            style="@style/red_btn_style"
            android:layout_width="@dimen/s_160dp"
            android:layout_height="@dimen/s_35dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/s_16dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/s_10dp"
        android:layout_marginRight="@dimen/s_10dp">

        <CheckBox
            android:id="@+id/check_user_protocol"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawablePadding="@dimen/s_3dp"
            android:paddingBottom="@dimen/s_12dp"
            android:paddingTop="@dimen/s_12dp"
            android:text="@string/register_agree"
            android:textSize="@dimen/s_12dp" />

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:id="@+id/register_user_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_2dp"
            android:layout_toRightOf="@id/check_user_protocol"
            android:paddingBottom="@dimen/s_12dp"
            android:paddingTop="@dimen/s_14dp"
            android:text="@string/user_protocol"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/s_12dp" />


        <TextView
            android:id="@+id/register_to_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:gravity="right"
            android:paddingBottom="@dimen/s_15dp"
            android:paddingLeft="@dimen/s_10dp"
            android:paddingTop="@dimen/s_15dp"
            android:text="@string/goto_login"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/s_12dp" />
    </RelativeLayout>


</LinearLayout>