<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_efefef"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_48dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/find_password_back_img"
            android:layout_width="@dimen/s_40dp"
            android:layout_height="fill_parent"
            android:padding="@dimen/s_15dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/find_password_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_password"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/s_18dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_10dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="手机号"
            android:textColor="@color/c_666666" />


        <EditText
            android:id="@+id/find_password_edit_phone_num_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_phone_num"
            android:inputType="phone"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/s_50dp"
        android:layout_marginTop="@dimen/s_0.5dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="验证码"
            android:textColor="@color/c_666666" />

        <EditText
            android:id="@+id/find_password_edit_verify_code_et"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/s_30dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_verify_code"
            android:maxLength="15"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/find_password_get_verify_code_tv"
            style="@style/red_btn_style"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/s_10dp"
            android:layout_marginRight="@dimen/s_20dp"
            android:layout_marginTop="@dimen/s_10dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/register_get_verify_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/s_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_10dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="新密码"
            android:textColor="@color/c_666666" />


        <EditText
            android:id="@+id/find_password_edit_psw_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_psw"
            android:inputType="textPassword"
            android:maxEms="20"
            android:maxLength="20"
            android:minEms="6"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_0.5dp"
        android:background="@android:color/white">

        <com.shinc.duobaohui.customview.imp.CustomTextView
            android:layout_width="@dimen/s_70dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/s_10dp"
            android:text="确认密码"
            android:textColor="@color/c_666666" />


        <EditText
            android:id="@+id/find_password_edit_psw_repeat_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_psw_repeat"
            android:inputType="textPassword"
            android:maxEms="20"
            android:maxLength="20"
            android:minEms="6"
            android:paddingLeft="@dimen/s_13dp"
            android:singleLine="true"
            android:textColorHint="@color/c_afafaf"
            android:textSize="@dimen/s_13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_10dp"
        android:background="@android:color/white"
        android:gravity="center">


        <TextView
            android:id="@+id/find_password_commit_tv"
            style="@style/red_btn_style"
            android:layout_width="@dimen/s_160dp"
            android:layout_height="@dimen/s_35dp"
            android:layout_marginBottom="@dimen/s_10dp"
            android:layout_marginTop="@dimen/s_10dp"
            android:gravity="center"
            android:text="@string/find_password_commit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/s_16dp" />
    </LinearLayout>

</LinearLayout>